# sre-automation-demo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ansible/: ansible.cfg  inventory.ini.example
ansible/playbooks/: deploy_app.yml
app/: Dockerfile  README.md  __init__.py  main.py  requirements.txt
docs/: generative-ai-for-sre.md  insider-risk-evaluation.md  observability.md  presentation.md  slides.md
examples/config/: dev.yaml  prod.yaml  staging.yaml
src/sre_automation/: __init__.py  cli.py  config.py  deploy.py  observability.py  rollback.py  secrets.py  terraform.py
terraform/envs/aws-dev/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/envs/dev/: .terraform.lock.hcl  main.tf
terraform/envs/prod/: main.tf
terraform/envs/staging/: main.tf  outputs.tf  variables.tf
terraform/modules/ec2_app/: main.tf  outputs.tf  variables.tf
terraform/modules/service/: main.tf  outputs.tf  variables.tf
tests/: test_app.py  test_config.py  test_deploy.py  test_secrets.py
